--- a/src/app/components/orphan-components/auth-button/auth-button.component.html
+++ b/src/app/components/orphan-components/auth-button/auth-button.component.html
@@ -1,8 +1,9 @@
 <div class="flex justify-center">
-  <app-login-button *ngIf="(firebaseAuth.isLoggedIn) === false">
-  </app-login-button>
-  <app-user-menu *ngIf="firebaseAuth.isLoggedIn">
+  <app-user-menu *ngIf="firebaseAuth.firebaseUserData as user else loginButton">
   </app-user-menu>
+  <ng-template #loginButton>
+    <app-login-button></app-login-button>
+  </ng-template>
 </div>
 
 
