--- a/src/app/components/orphan-components/auth-button/login-button/login-button.component.html
+++ b/src/app/components/orphan-components/auth-button/login-button/login-button.component.html
@@ -1,3 +1,3 @@
-<button mat-flat-button class="bg-blue-500 text-white" (click)="login()">
+<button class="w-16 rounded h-6 text-xs font-semibold bg-blue-500 text-white" (click)="login()">
   Log in
 </button>
