--- a/src/app/components/orphan-components/auth-login/auth-login.component.html
+++ b/src/app/components/orphan-components/auth-login/auth-login.component.html
@@ -1,33 +1,84 @@
-<div class="displayTable">
-  <div class="displayTableCell">
+<app-nav-bar></app-nav-bar>
 
-    <div class="authBlock">
-      <h3>Sign In</h3>
-      <div class="formGroup">
-        <input type="text" class="formControl" placeholder="Username" #userName required>
+<div class="flex justify-center items-center mt-24">
+  <div class="w-96 flex flex-col">
+    <div>
+      <div class="flex flex-row justify-between">
+        <h1 class="text-xl font-bold text-gray-900">Login</h1>
+        <span class="text-xl">⚡</span>
       </div>
-
-      <div class="formGroup">
-        <input type="password" class="formControl" placeholder="Password" #userPassword required>
-      </div>
-
-      <!-- Calling SignIn Api from AuthService -->
-      <div class="formGroup">
-        <input type="button" class="btn btnPrimary" value="Log in" (click)="authService.SignIn(userName.value, userPassword.value)">
-      </div>
-
-      <div class="formGroup">
-        <span class="or"><span class="orInner">Or</span></span>
-      </div>
-
-      <div class="forgotPassword">
-        <span routerLink="/forgot-password">Forgot Password?</span>
-      </div>
+      <h4 class="text-xs mt-1 mb-4 text-gray-400">Login and start doing some shit</h4>
     </div>
-
-    <div class="redirectToLogin">
-      <span>Don't have an account?<span class="redirect" routerLink="/signup"> Sign Up</span></span>
+    <div>
+      <div class="mb-1">
+        <span class="font-bold text-xs mb-2 text-gray-500">Email</span>
+      </div>
+      <input
+        class="h-10 w-full rounded-full border border-gray-300 outline-none p-4 text-xs"
+        placeholder="name@domain.com"
+        type="text"
+        #username
+      />
     </div>
-
+    <div class="mt-2">
+      <div class="mb-1">
+        <span class="font-bold text-xs mb-2 text-gray-500">Password</span>
+      </div>
+      <input
+        class="h-10 w-full rounded-full border border-gray-300 outline-none p-4 text-xs"
+        placeholder="*********"
+        type="password"
+        #password
+      />
+    </div>
+    <div class="h-10 flex justify-end items-center">
+      <a routerLink="/forgot-password" class="text-xs font-semibold text-blue-500">Forgot password?</a>
+    </div>
+    <div>
+      <button class="w-full h-10 bg-blue-500 rounded-full flex items-center justify-center"
+              type="submit"
+              (click)="authService.SignIn(username.value, password.value)">
+        <span class="text-white font-medium">Login</span>
+      </button>
+    </div>
+    <div class="mt-6">
+      <span class="text-xs">Not registered yet?
+        <a class="font-semibold text-blue-500" routerLink="/signup">Create an account</a>
+      </span>
+    </div>
   </div>
 </div>
+
+<!--<div class="displayTable">-->
+<!--  <div class="displayTableCell">-->
+
+<!--    <div class="authBlock">-->
+<!--      <h3>Sign In</h3>-->
+<!--      <div class="formGroup">-->
+<!--        <input type="text" class="formControl" placeholder="Username" #userName required>-->
+<!--      </div>-->
+
+<!--      <div class="formGroup">-->
+<!--        <input type="password" class="formControl" placeholder="Password" #userPassword required>-->
+<!--      </div>-->
+
+<!--      &lt;!&ndash; Calling SignIn Api from AuthService &ndash;&gt;-->
+<!--      <div class="formGroup">-->
+<!--        <input type="button" class="btn btnPrimary" value="Log in" (click)="authService.SignIn(username.value, password.value)">-->
+<!--      </div>-->
+
+<!--      <div class="formGroup">-->
+<!--        <span class="or"><span class="orInner">Or</span></span>-->
+<!--      </div>-->
+
+<!--      <div class="forgotPassword">-->
+<!--        <span routerLink="/forgot-password">Forgot Password?</span>-->
+<!--      </div>-->
+<!--    </div>-->
+
+<!--    <div class="redirectToLogin">-->
+<!--      <span>Don't have an account?<span class="redirect" routerLink="/signup"> Sign Up</span></span>-->
+<!--    </div>-->
+
+<!--  </div>-->
+<!--</div>-->
