--- a/src/app/components/orphan-components/auth-signup/auth-signup.component.html
+++ b/src/app/components/orphan-components/auth-signup/auth-signup.component.html
@@ -1,30 +1,81 @@
-<div class="displayTable">
-  <div class="displayTableCell">
+<app-nav-bar></app-nav-bar>
 
-    <div class="authBlock">
-      <h3>Sign Up</h3>
-
-      <div class="formGroup">
-        <input type="email" class="formControl" placeholder="Email Address" #userEmail required>
+<div class="flex justify-center items-center mt-24">
+  <div class="w-96 flex flex-col">
+    <div>
+      <!--      <div class="mb-2">-->
+      <!--        <span class="text-xl">⚡</span>-->
+      <!--      </div>-->
+      <div class="flex flex-row justify-between">
+        <h1 class="text-xl font-bold text-gray-900">Sign up</h1>
+        <span class="text-xl">📝</span>
       </div>
-
-      <div class="formGroup">
-        <input type="password" class="formControl" placeholder="Password" #userPwd required>
-      </div>
-
-      <div class="formGroup">
-        <input type="button" class="btn btnPrimary" value="Sign Up" (click)="authService.SignUp(userEmail.value, userPwd.value)">
-      </div>
-
-      <div class="formGroup">
-        <span class="or"><span class="orInner">Or</span></span>
-      </div>
-
+      <h4 class="text-xs mt-1 mb-4 text-gray-400">Create an account and we can get started.</h4>
     </div>
-
-    <div class="redirectToLogin">
-      <span>Already have an account? <span class="redirect" routerLink="/sign-in">Log In</span></span>
+    <div>
+      <div class="mb-1">
+        <span class="font-bold text-xs mb-2 text-gray-500">Email</span>
+      </div>
+      <input
+        class="h-10 w-full rounded-full border border-gray-300 outline-none p-4 text-xs"
+        placeholder="name@domain.com"
+        type="text"
+        #email
+      />
+    </div>
+    <div class="mt-2">
+      <div class="mb-1">
+        <span class="font-bold text-xs mb-2 text-gray-500">Password</span>
+      </div>
+      <input
+        class="h-10 w-full rounded-full border border-gray-300 outline-none p-4 text-xs"
+        placeholder="*********"
+        type="password"
+        #password
+      />
+    </div>
+    <div class="mt-6">
+      <button class="w-full h-10 bg-blue-500 rounded-full flex items-center justify-center"
+              type="submit"
+              (click)="authService.SignUp(email.value, password.value)">
+        <span class="text-white font-medium">Sign up</span>
+      </button>
+    </div>
+    <div class="mt-6">
+      <span class="text-xs">Already have an account?
+        <a class="font-semibold text-blue-500" routerLink="/login"> Login</a>
+      </span>
     </div>
   </div>
-
 </div>
+
+<!--<div class="displayTable">-->
+<!--  <div class="displayTableCell">-->
+
+<!--    <div class="authBlock">-->
+<!--      <h3>Sign Up</h3>-->
+
+<!--      <div class="formGroup">-->
+<!--        <input type="email" class="formControl" placeholder="Email Address" #userEmail required>-->
+<!--      </div>-->
+
+<!--      <div class="formGroup">-->
+<!--        <input type="password" class="formControl" placeholder="Password" #userPwd required>-->
+<!--      </div>-->
+
+<!--      <div class="formGroup">-->
+<!--        <input type="button" class="btn btnPrimary" value="Sign Up" (click)="authService.SignUp(userEmail.value, userPwd.value)">-->
+<!--      </div>-->
+
+<!--      <div class="formGroup">-->
+<!--        <span class="or"><span class="orInner">Or</span></span>-->
+<!--      </div>-->
+
+<!--    </div>-->
+
+<!--    <div class="redirectToLogin">-->
+<!--      <span>Already have an account? <span class="redirect" routerLink="/sign-in">Log In</span></span>-->
+<!--    </div>-->
+<!--  </div>-->
+
+<!--</div>-->
