--- a/src/app/components/orphan-components/auth-verify-email/auth-verify-email.component.html
+++ b/src/app/components/orphan-components/auth-verify-email/auth-verify-email.component.html
@@ -1,27 +1,29 @@
-<div class="displayTable">
-  <div class="displayTableCell">
+<app-nav-bar></app-nav-bar>
 
-    <div class="authBlock">
-      <h3>Thank You for Registering</h3>
-
-      <div class="formGroup" *ngIf="authService.firebaseUserData as user">
-        <p class="text-center">We have sent a confirmation email to <strong>{{user.email}}</strong>.</p>
-        <p class="text-center">Please check your email and click on the link to verfiy your email address.</p>
+<div class="flex justify-center items-center mt-24">
+  <div class="container-width flex flex-col">
+    <div>
+      <div class="flex flex-row justify-between">
+        <h1 class="text-xl font-bold text-gray-900">Verify your email address</h1>
+        <span class="text-xl">📩</span>
       </div>
-
-      <!-- Calling SendVerificationMail() method using authService Api -->
-      <div class="formGroup">
-        <button type="button" class="btn btnPrimary" (click)="authService.SendVerificationMail()">
-          <i class="fas fa-redo-alt"></i>
-          Resend Verification Email
-        </button>
+      <h4 class="text-sm mt-1 mb-4 text-gray-900">Thank You for Registering</h4>
+      <div *ngIf="authService.firebaseUserData as user">
+        <h5 class="text-xs mt-1 mb-1 text-gray-400">We have sent a confirmation email to <strong class="text-gray-900">{{user.email}}</strong>.</h5>
+        <h6 class="text-xs mt-1 text-gray-400">Please check your email and click on the link to verfiy your email address.</h6>
       </div>
-
     </div>
-
-    <div class="redirectToLogin">
-      <span>Go back to?<span class="redirect" routerLink="/sign-in"> Sign in</span></span>
+    <div class="mt-6">
+      <button class="w-full h-10 bg-blue-500 rounded-full flex items-center justify-center"
+              type="submit"
+              (click)="authService.SendVerificationMail()">
+        <span class="text-white font-medium">Resend verification email</span>
+      </button>
     </div>
-
+    <div class="mt-6">
+      <span class="text-xs">Not registered yet?
+        <a class="font-semibold text-blue-500" routerLink="/signup">Create an account</a>
+      </span>
+    </div>
   </div>
 </div>
