--- a/src/app/components/orphan-components/auth-forgot-password/auth-forgot-password.component.html
+++ b/src/app/components/orphan-components/auth-forgot-password/auth-forgot-password.component.html
@@ -17,6 +17,7 @@
         class="h-10 w-full rounded-full border border-gray-300 outline-none p-4 text-xs"
         placeholder="name@domain.com"
         type="text"
+        name="username"
         #passwordResetEmail
       />
     </div>
