--- a/src/app/components/orphan-components/auth-button/user-menu/user-menu.component.html
+++ b/src/app/components/orphan-components/auth-button/user-menu/user-menu.component.html
@@ -3,7 +3,7 @@
   [matMenuTriggerFor]="menu"
   (menuOpened)="menuOpened()"
   (menuClosed)="menuClosed()">
-    <div class="h-8 w-8 rounded-full text-white flex items-center justify-center main-action-colour">
+    <div class="h-8 w-8 rounded-full text-xs font-semibold text-white flex items-center justify-center main-action-colour">
       {{avatarDisplayName}}
     </div>
     <mat-icon *ngIf="!menuOpen" class="mt-auto mb-auto text-sm text-gray-500 icon-width icon-position">expand_more</mat-icon>
