--- a/src/app/components/pages/tracker-main/add-tracker-dialog/add-tracker-dialog.component.html
+++ b/src/app/components/pages/tracker-main/add-tracker-dialog/add-tracker-dialog.component.html
@@ -1,24 +1,67 @@
-<div class="bg-white">
-  <div><span class="text-gray-600 text-lg">Add tracker</span></div>
-  <p class="text-gray-400">Enter a URL below to track the product on the webpage.</p>
-  <form [formGroup]="form">
-    <input [formControlName]="'url'" class="w-full">
-  </form>
-
-
-  <div *ngIf="isWorking !== undefined" class="mt-2">
-    <div class="text-green-500" *ngIf="isWorking">
-      <fa-icon [icon]="faCheckCircle"></fa-icon>
-      <span class="ml-2">This website is confirmed as working.</span>
+<div class="flex justify-center items-center">
+  <div class="w-full flex flex-col">
+    <div>
+      <div class="flex flex-row justify-between">
+        <h1 class="text-xl font-bold text-gray-900">Add new tracker</h1>
+        <span class="text-xl">🔗</span>
+      </div>
+      <h4 class="text-xs mt-1 mb-4 text-gray-400">Enter a URL below to begin tracking the product on the page.</h4>
     </div>
-    <div class="text-yellow-500" *ngIf="!isWorking">
-      <fa-icon [icon]="faQuestionCircle"></fa-icon>
-      <span class="ml-2">We cannot confirm this website is working.</span>
+    <div>
+      <div class="mb-1">
+        <span class="font-bold text-xs mb-2 text-gray-500">URL</span>
+      </div>
+      <form [formGroup]="form">
+        <input
+          class="h-10 w-full rounded-full border border-gray-300 outline-none p-4 text-xs"
+          [formControlName]="'url'"
+          placeholder="https://amazon.co.uk/..."
+          type="text"
+        />
+      </form>
     </div>
-  </div>
-
-  <div class="flex justify-between p-2">
-    <button mat-flat-button class="bg-blue-500 text-white" (click)="submit()" [disabled]="!canContinue">Okay</button>
-    <button mat-flat-button class="bg-gray-600 text-white" (click)="close()">Cancel</button>
+    <div class="mt-2">
+      <div class="mt-2 flex justify-end"  [ngClass]="{'invisible':  isWorking === undefined}">
+        <div class="text-green-500 text-xs" *ngIf="isWorking">
+          <fa-icon [icon]="faCheckCircle"></fa-icon>
+          <span class="ml-2">This website is confirmed as working.</span>
+        </div>
+        <div class="text-yellow-500 text-xs" *ngIf="!isWorking">
+          <fa-icon [icon]="faQuestionCircle"></fa-icon>
+          <span class="ml-2">We cannot confirm this website is working.</span>
+        </div>
+      </div>
+    </div>
+    <div class="mt-2">
+      <div class="flex justify-between p-2">
+        <button mat-flat-button class="bg-gray-600 text-white rounded-full" (click)="close()">Cancel</button>
+        <button mat-flat-button class="bg-blue-500 text-white rounded-full" (click)="submit()" [disabled]="!canContinue">Okay</button>
+      </div>
+    </div>
   </div>
 </div>
+
+<!--<div class="bg-white">-->
+<!--  <div><span class="text-gray-600 text-lg">Add tracker</span></div>-->
+<!--  <p class="text-gray-400">Enter a URL below to track the product on the webpage.</p>-->
+<!--  <form [formGroup]="form">-->
+<!--    <input [formControlName]="'url'" class="w-full">-->
+<!--  </form>-->
+
+
+<!--  <div *ngIf="isWorking !== undefined" class="mt-2">-->
+<!--    <div class="text-green-500" *ngIf="isWorking">-->
+<!--      <fa-icon [icon]="faCheckCircle"></fa-icon>-->
+<!--      <span class="ml-2">This website is confirmed as working.</span>-->
+<!--    </div>-->
+<!--    <div class="text-yellow-500" *ngIf="!isWorking">-->
+<!--      <fa-icon [icon]="faQuestionCircle"></fa-icon>-->
+<!--      <span class="ml-2">We cannot confirm this website is working.</span>-->
+<!--    </div>-->
+<!--  </div>-->
+
+<!--  <div class="flex justify-between p-2">-->
+<!--    <button mat-flat-button class="bg-blue-500 text-white" (click)="submit()" [disabled]="!canContinue">Okay</button>-->
+<!--    <button mat-flat-button class="bg-gray-600 text-white" (click)="close()">Cancel</button>-->
+<!--  </div>-->
+<!--</div>-->
