--- a/src/app/components/pages/tracker-main/product-tracker/product-tracker.component.html
+++ b/src/app/components/pages/tracker-main/product-tracker/product-tracker.component.html
@@ -5,28 +5,28 @@
         <span class="text-xs text-gray-500 mb-1">Product</span>
         <span class="text-xs font-semibold truncate">{{trackerDefinition.title}}</span>
       </div>
-      <div class="flex flex-col-reverse mt-auto mb-auto">
-        <div class="flex flex-row justify-end">
-<!--          <span class="text-xs text-gray-500">Price</span>-->
-          <div *ngIf="trackerDefinition.priceData.priceDifference > 0" class="h-4 w-12 flex rounded bg-yellow-300 text-yellow-900 justify-center items-center">
-            <span class="text-base"><mat-icon [inline]="true">arrow_drop_up</mat-icon></span>
-            <span class="text-xxs font-semibold">{{priceDifference}}%</span>
-          </div>
-          <div *ngIf="trackerDefinition.priceData.priceDifference == 0" class="h-4 w-12 flex rounded bg-gray-300 text-gray-900 justify-center items-center">
-            <span class="text-xxs font-semibold">{{priceDifference}}%</span>
-          </div>
-          <div *ngIf="trackerDefinition.priceData.priceDifference < 0" class="h-4 w-12 flex rounded bg-green-300 text-green-900 justify-center items-center">
-            <span class="text-base"><mat-icon class="text-lg" [inline]="true">arrow_drop_down</mat-icon></span>
-            <span class="text-xxs font-semibold">{{priceDifference}}%</span>
-          </div>
-        </div>
-        <div class="flex flex-row justify-between">
-          <span *ngIf="trackerDefinition.priceData.priceDifference > 0" class="text-base text-yellow-500 text-right font-semibold">{{trackerDefinition.id ? trackerDefinition.priceData.currentPricePretty : '...'}}</span>
-          <span *ngIf="trackerDefinition.priceData.priceDifference == 0" class="text-base text-gray-800 text-right font-semibold">{{trackerDefinition.id ? trackerDefinition.priceData.currentPricePretty : '...'}}</span>
-          <span *ngIf="trackerDefinition.priceData.priceDifference < 0" class="text-base text-green-500 text-right font-semibold">{{trackerDefinition.id ? trackerDefinition.priceData.currentPricePretty : '...'}}</span>
-          <span class="ml-1 text-xs text-gray-400 font-semibold flex items-end initial-price-position">/ {{trackerDefinition.id ? trackerDefinition.priceData.initialPricePretty : '...'}}</span>
-        </div>
-      </div>
+<!--      <div class="flex flex-col-reverse mt-auto mb-auto">-->
+<!--        <div class="flex flex-row justify-end">-->
+<!--&lt;!&ndash;          <span class="text-xs text-gray-500">Price</span>&ndash;&gt;-->
+<!--          <div *ngIf="trackerDefinition.priceData.priceDifference > 0" class="h-4 w-12 flex rounded bg-yellow-300 text-yellow-900 justify-center items-center">-->
+<!--            <span class="text-base"><mat-icon [inline]="true">arrow_drop_up</mat-icon></span>-->
+<!--            <span class="text-xxs font-semibold">{{priceDifference}}%</span>-->
+<!--          </div>-->
+<!--          <div *ngIf="trackerDefinition.priceData.priceDifference == 0" class="h-4 w-12 flex rounded bg-gray-300 text-gray-900 justify-center items-center">-->
+<!--            <span class="text-xxs font-semibold">{{priceDifference}}%</span>-->
+<!--          </div>-->
+<!--          <div *ngIf="trackerDefinition.priceData.priceDifference < 0" class="h-4 w-12 flex rounded bg-green-300 text-green-900 justify-center items-center">-->
+<!--            <span class="text-base"><mat-icon class="text-lg" [inline]="true">arrow_drop_down</mat-icon></span>-->
+<!--            <span class="text-xxs font-semibold">{{priceDifference}}%</span>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="flex flex-row justify-between">-->
+<!--          <span *ngIf="trackerDefinition.priceData.priceDifference > 0" class="text-base text-yellow-500 text-right font-semibold">{{trackerDefinition.id ? trackerDefinition.priceData.currentPricePretty : '...'}}</span>-->
+<!--          <span *ngIf="trackerDefinition.priceData.priceDifference == 0" class="text-base text-gray-800 text-right font-semibold">{{trackerDefinition.id ? trackerDefinition.priceData.currentPricePretty : '...'}}</span>-->
+<!--          <span *ngIf="trackerDefinition.priceData.priceDifference < 0" class="text-base text-green-500 text-right font-semibold">{{trackerDefinition.id ? trackerDefinition.priceData.currentPricePretty : '...'}}</span>-->
+<!--          <span class="ml-1 text-xs text-gray-400 font-semibold flex items-end initial-price-position">/ {{trackerDefinition.id ? trackerDefinition.priceData.initialPricePretty : '...'}}</span>-->
+<!--        </div>-->
+<!--      </div>-->
     </div>
   </div>
   <div class="h-40 flex flex-row">
@@ -58,18 +58,18 @@
             <!--    <fa-icon class="cross-overlay text-red-400 z-10" [icon]="faTimes"></fa-icon>-->
           </div>
         </div>
-        <div class="ml-2">
+        <div class="ml-2 flex items-center">
           <span class="text-xxs text-gray-800 font-semibold">{{trackerDefinition.isAvailable ? "Available to buy" : "Not available to buy"}}.</span>
         </div>
       </div>
 
       <div class="mt-1 mb-1 flex flex-row">
         <div class="h-6 w-6 rounded bg-gray-300 flex justify-center items-center">
-          <div class="text-gray-700">
+          <div class="text-gray-700 flex justify-center items-center h-full w-full">
             <span class="text-xs">24</span><span class="text-xxs">h</span>
           </div>
         </div>
-        <div class="ml-2">
+        <div class="ml-2 flex items-center">
           <span class="text-xxs text-gray-800 font-semibold">Tracker will update every {{trackerDefinition.trackingFrequency}}.</span>
         </div>
       </div>
@@ -80,7 +80,7 @@
             <fa-icon [icon]="faClock"></fa-icon>
           </div>
         </div>
-        <div class="ml-2">
+        <div class="ml-2 flex items-center">
           <span class="text-xxs text-gray-800 font-semibold">Last updated 01-04 12:00am.</span>
         </div>
       </div>
@@ -91,7 +91,7 @@
             <fa-icon [icon]="faEnvelope"></fa-icon>
           </div>
         </div>
-        <div class="ml-2">
+        <div class="ml-2 flex items-center">
           <span class="text-xxs text-gray-800 font-semibold">Email notifications are <strong>OFF</strong>.</span>
         </div>
       </div>
@@ -105,19 +105,45 @@
       <app-tracker-chart [priceDifference]="trackerDefinition.priceData.priceDifference"></app-tracker-chart>
     </div>
     <div class="w-1/5 h-full">
-      <div class="p-4 pr-6 w-full h-full">
-        <div class="h-full flex flex-col justify-between items-end">
-          <div class="mb-2 w-full">
+      <div class="p-4 pr-4 w-full h-full">
+        <div class="flex flex-col justify-between h-full">
+          <div class="flex flex-col-reverse mt-auto mb-auto">
+            <div class="flex flex-row justify-end mt-1">
+              <!--          <span class="text-xs text-gray-500">Price</span>-->
+              <div *ngIf="trackerDefinition.priceData.priceDifference > 0" class="h-4 w-12 flex rounded bg-yellow-300 text-yellow-900 justify-center items-center">
+                <span class="text-base"><mat-icon [inline]="true">arrow_drop_up</mat-icon></span>
+                <span class="text-xxs font-semibold">{{priceDifference}}%</span>
+              </div>
+              <div *ngIf="trackerDefinition.priceData.priceDifference == 0" class="h-4 w-12 flex rounded bg-gray-300 text-gray-900 justify-center items-center">
+                <span class="text-xxs font-semibold">{{priceDifference}}%</span>
+              </div>
+              <div *ngIf="trackerDefinition.priceData.priceDifference < 0" class="h-4 w-12 flex rounded bg-green-300 text-green-900 justify-center items-center">
+                <span class="text-base"><mat-icon class="text-lg" [inline]="true">arrow_drop_down</mat-icon></span>
+                <span class="text-xxs font-semibold">{{priceDifference}}%</span>
+              </div>
+            </div>
+            <div class="flex flex-row justify-end">
+              <span *ngIf="trackerDefinition.priceData.priceDifference > 0" class="text-base text-yellow-500 text-right font-semibold">{{trackerDefinition.id ? trackerDefinition.priceData.currentPricePretty : '...'}}</span>
+              <span *ngIf="trackerDefinition.priceData.priceDifference == 0" class="text-base text-gray-800 text-right font-semibold">{{trackerDefinition.id ? trackerDefinition.priceData.currentPricePretty : '...'}}</span>
+              <span *ngIf="trackerDefinition.priceData.priceDifference < 0" class="text-base text-green-500 text-right font-semibold">{{trackerDefinition.id ? trackerDefinition.priceData.currentPricePretty : '...'}}</span>
+              <span class="text-xs ml-1 text-gray-400 font-semibold flex items-end initial-price-position">/ {{trackerDefinition.id ? trackerDefinition.priceData.initialPricePretty : '...'}}</span>
+            </div>
+          </div>
+          <div class="h-full flex flex-row justify-end items-end">
             <a href="{{trackerDefinition.url}}" target="_blank">
-              <button class="main-action-colour hover:bg-blue-400 text-white rounded-none h-8 w-full">
-                <span class="text-xxs font-semibold ">OPEN PRODUCT PAGE</span>
+              <button class="main-action-colour mr-2 hover:bg-blue-400 text-white rounded-none h-8 w-8 flex items-center justify-center">
+                <span class="text-sm font-semibold"><fa-icon [icon]="faExternalLinkAlt"></fa-icon></span>
               </button>
             </a>
-          </div>
-
-          <button class="bg-white text-gray-500 border border-gray-300 rounded-none h-8 clear-button w-10 hover:cursor-pointer hover:bg-gray-100">
+            <button class="bg-white text-gray-500 border border-gray-300 h-8 w-8 hover:cursor-pointer hover:bg-gray-100"
+                    [matMenuTriggerFor]="menu">
               <span class="w-full h-full flex justify-center items-center"><fa-icon [icon]="faCog"></fa-icon></span>
-          </button>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button class="h-4" mat-menu-item (click)="remove()"><span class="h-full flex items-center text-xs">Enable email notifications</span></button>
+              <button class="h-4 bg-red-100 text-red-500" mat-menu-item (click)="remove()"><span class="h-full flex items-center text-xs">Delete tracker</span></button>
+            </mat-menu>
+          </div>
         </div>
       </div>
     </div>
