--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,14 @@ body {
   //background-color: #f3f3f3;
 }
 
+/*
+* Material overrides
+ */
+
+div .mat-menu-panel{
+  border-radius: 0 !important;
+}
+
 @media only screen and (min-width: 640px){
   .container{
     max-width: 580px;
