Added tracker skeleton that is displayed while tracker data is being loaded from backend + added hostname to tracker upper right

--- a/src/app/components/pages/tracker-main/tracker-main.component.html
+++ b/src/app/components/pages/tracker-main/tracker-main.component.html
@@ -3,10 +3,10 @@
 <div class="">
   <div class="container mt-4 ml-auto mr-auto">
     <h1>Overview</h1>
-    <div class="w-full p-3 pl-6 pr-6 pb-2 card-grey-border bg-white">
+    <div class="w-full pt-2 pl-6 pr-6 pb-2 card-grey-border bg-white rounded-md mt-2">
       <div class="flex flex-row justify-between items-center">
         <div class="text-sm text-gray-600 ">Welcome back, <span class="text-gray-800 font-medium">{{firebaseAuth.firebaseUserData.email}}</span> - Let's get started.</div>
-        <button class="main-action-colour text-white border border-white text-xs font-semibold w-40 rounded-full h-10"
+        <button class="main-action-colour text-white border border-white text-xs font-semibold w-36 rounded h-8"
                 (click)="openAddTrackerDialog()" [disabled]="activeTrackers.length >= 22">ADD NEW TRACKER</button>
       </div>
       <div class="">
@@ -28,6 +28,7 @@
         <app-product-tracker
           class="flex-1 mb-4 sm:mb-0"
           [trackerDefinition]="tracker"
+          [isSkeleton]="tracker.id === 'tbd'"
           (removeEmitter)="removeTracker($event)"></app-product-tracker>
 <!--        <div *ngIf="!lastChild" class="m-2"></div>-->
       </ng-container>
