--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,12 @@ html, body {
 }
 
 body {
-  //background-color: #f3f3f3;
+  background-color: #fafafa;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding:0;
 }
 
 /*
