--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -13,3 +13,5 @@
 <!--</div>-->
 
 <button mat-flat-button class="mt-5 bg-white" [routerLink]="'/app'">Tracker main</button>
+
+<p>Naming: Think more towards the process of purchasing something i.e. bagged, swish, basket</p>
