--- a/src/app/components/pages/tracker-main/product-tracker/product-tracker.component.html
+++ b/src/app/components/pages/tracker-main/product-tracker/product-tracker.component.html
@@ -45,13 +45,14 @@
         </div>
 
         <div class="mt-1 mb-1 flex flex-row">
-          <div class="h-6 w-6 rounded bg-gray-300 flex justify-center items-center">
+          <button class="h-6 w-6 rounded bg-gray-300 flex justify-center items-center hover:bg-gray-400 cursor-pointer"
+            (click)="toggleFrequency()">
             <div class="text-gray-700 flex justify-center items-center h-full w-full">
-              <span class="text-xs">24</span><span class="text-xxs">h</span>
+              <span class="text-xs">{{frequencyNumber}}</span><span class="text-xxs">{{frequencyUnit}}</span>
             </div>
-          </div>
+          </button>
           <div class="ml-2 flex items-center">
-            <span class="text-xxs text-gray-800 font-semibold">Tracker will update every {{trackerDefinition.trackingFrequency}}.</span>
+            <span class="text-xxs text-gray-800 font-semibold">Tracker updates every {{frequencyPretty}}.</span>
           </div>
         </div>
 
@@ -93,14 +94,14 @@
                 <!--          <span class="text-xs text-gray-500">Price</span>-->
                 <div *ngIf="trackerDefinition.priceData.priceDifference > 0" class="h-4 w-12 flex rounded bg-yellow-300 text-yellow-900 justify-center items-center">
                   <span class="text-base"><mat-icon [inline]="true">arrow_drop_up</mat-icon></span>
-                  <span class="text-xxs font-semibold">{{priceDifference}}%</span>
+                  <span class="text-xxs font-semibold">{{priceDifference}}</span>
                 </div>
                 <div *ngIf="trackerDefinition.priceData.priceDifference == 0" class="h-4 w-12 flex rounded bg-gray-300 text-gray-900 justify-center items-center">
-                  <span class="text-xxs font-semibold">{{priceDifference}}%</span>
+                  <span class="text-xxs font-semibold">{{priceDifference}}</span>
                 </div>
                 <div *ngIf="trackerDefinition.priceData.priceDifference < 0" class="h-4 w-12 flex rounded bg-green-300 text-green-900 justify-center items-center">
                   <span class="text-base"><mat-icon class="text-lg" [inline]="true">arrow_drop_down</mat-icon></span>
-                  <span class="text-xxs font-semibold">{{priceDifference}}%</span>
+                  <span class="text-xxs font-semibold">{{priceDifference}}</span>
                 </div>
               </div>
               <div class="flex flex-col items-end">
