--- a/src/app/components/pages/tracker-main/active-tracker-display/tracker-settings-panel/static-colour-settings-row/static-colour-settings-row.component.html
+++ b/src/app/components/pages/tracker-main/active-tracker-display/tracker-settings-panel/static-colour-settings-row/static-colour-settings-row.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-row mt-1 mb-1 align-center">
   <div class="w-1/5 h-full flex justify-center mt-auto mb-auto">
-    <div class="border border-blue-400 bg-white w-7 h-7 flex justify-center align-center rounded-md shadow">
+    <div class="border border-blue-400 bg-white w-7 h-7 flex justify-center align-center rounded-md shadow hover:bg-blue-100 cursor-pointer">
       <ng-container *ngIf="icon">
         <fa-icon class="text-blue-400 icon-position icon-size" [icon]="icon"></fa-icon>
       </ng-container>
