--- a/src/app/components/pages/tracker-main/active-tracker-display/tracker-settings-panel/tracker-settings-panel.component.html
+++ b/src/app/components/pages/tracker-main/active-tracker-display/tracker-settings-panel/tracker-settings-panel.component.html
@@ -1,7 +1,7 @@
 <div class="p-2 flex flex-col justify-around">
 
   <app-settings-row
-    [icon]="faShoppingBag"
+    [icon]="faShoppingBasket"
     [textIcon]="null"
     [label]="'Availability'"
     [value]="'Available'"
