--- a/src/app/components/orphan-components/auth-login/auth-login.component.html
+++ b/src/app/components/orphan-components/auth-login/auth-login.component.html
@@ -10,43 +10,43 @@
       <h4 class="text-xs mt-1 mb-4 text-gray-400">Login and start doing some shit</h4>
     </div>
     <div>
-      <div class="mb-1">
-        <span class="font-bold text-xs mb-2 text-gray-500">Email</span>
-      </div>
-      <input
-        class="h-10 w-full rounded-full border border-gray-300 outline-none p-4 text-xs"
-        placeholder="name@domain.com"
-        type="text"
-        name="username"
-        #username
-      />
-    </div>
-    <div class="mt-2">
-      <div class="mb-1">
-        <span class="font-bold text-xs mb-2 text-gray-500">Password</span>
-      </div>
-      <input
-        class="h-10 w-full rounded-full border border-gray-300 outline-none p-4 text-xs"
-        placeholder="*********"
-        type="password"
-        #password
-      />
-    </div>
-    <div class="h-10 flex justify-end items-center">
-      <a routerLink="/forgot-password" class="text-xs font-semibold text-blue-500">Forgot password?</a>
-    </div>
+<!--      <div class="mb-1">-->
+<!--        <span class="font-bold text-xs mb-2 text-gray-500">Email</span>-->
+<!--      </div>-->
+<!--      <input-->
+<!--        class="h-10 w-full rounded-full border border-gray-300 outline-none p-4 text-xs"-->
+<!--        placeholder="name@domain.com"-->
+<!--        type="text"-->
+<!--        name="username"-->
+<!--        #username-->
+<!--      />-->
+<!--    </div>-->
+<!--    <div class="mt-2">-->
+<!--      <div class="mb-1">-->
+<!--        <span class="font-bold text-xs mb-2 text-gray-500">Password</span>-->
+<!--      </div>-->
+<!--      <input-->
+<!--        class="h-10 w-full rounded-full border border-gray-300 outline-none p-4 text-xs"-->
+<!--        placeholder="*********"-->
+<!--        type="password"-->
+<!--        #password-->
+<!--      />-->
+<!--    </div>-->
+<!--    <div class="h-10 flex justify-end items-center">-->
+<!--      <a routerLink="/forgot-password" class="text-xs font-semibold text-blue-500">Forgot password?</a>-->
+<!--    </div>-->
     <div>
       <button class="w-full h-10 bg-blue-500 rounded-full flex items-center justify-center"
               type="submit"
-              (click)="authService.SignIn(username.value, password.value)">
+              (click)="gAuthService.googleSignIn()">
         <span class="text-white font-medium">Login</span>
       </button>
     </div>
-    <div class="mt-6">
-      <span class="text-xs">Not registered yet?
-        <a class="font-semibold text-blue-500" routerLink="/signup">Create an account</a>
-      </span>
-    </div>
+<!--    <div class="mt-6">-->
+<!--      <span class="text-xs">Not registered yet?-->
+<!--        <a class="font-semibold text-blue-500" routerLink="/signup">Create an account</a>-->
+<!--      </span>-->
+<!--    </div>-->
   </div>
 </div>
 
